添加插件模块，为用户表增加from字段，标识来源于第三方账号信息

--- a/Application/Admin/View/default/Index/index.html
+++ b/Application/Admin/View/default/Index/index.html
@@ -8,11 +8,8 @@
 <block name="area_body">
 	{:W('Menus/topbar')}
 	<div class="admin-main container-fluid">
-		{:W('Menus/left')}
 		<div class="admin-main-content">
-			{:W('Menus/breadcrumb')}
-			
-			
+            {:tag('admin_index')}
 			
 		</div>
 
