--- a/Application/Admin/View/default/Public/login.html
+++ b/Application/Admin/View/default/Public/login.html
@@ -25,27 +25,42 @@
 
 					<div class="modal-body">
 						<form action="" class="loginForm form clearfix validate-form" method="post">
-							<div class="form-group form-group-sm">
-								<div class="input-group col-xs-12 col-sm-12 col-md-12 col-lg-12">
-									<input type="text" class="required form-control  username" name="username" placeholder="{:L('PLACEHOLDER_USERNAME')}" />
-									<i class="fa fa-user"></i>
-								</div>
-							</div>
-							<div class="form-group form-group-sm">
-								<div class="input-group col-xs-12 col-sm-12 col-md-12 col-lg-12">
-									<input type="password" class="form-control required password" name="password" placeholder="{:L('PLACEHOLDER_PASSWORD')}" /><i class="fa fa-lock"></i>
-								</div>
-							</div>
-							<div class="form-group form-group-sm">
-								<div class="input-group col-xs-12 col-sm-12 col-md-12 col-lg-12">
-									<input type="text" class="form-control required verify" name="verify" placeholder="{:L('PLACEHOLDER_VERIFY')}" /><i class="fa fa-barcode"></i>
-								</div>
-							</div>
-							<div class="form-group form-group-sm ">
-								<div class="input-group clearfix col-xs-12 col-sm-12 col-md-12 col-lg-12">
-									<img onclick="refresh_verify('.verifyimg');" src="{:U('Admin/Public/verify',array('r'=>time()))}" class="verifyimg"  alt="验证码" title="点击换一张"/>
-								</div>
-							</div>
+                            <notempty name="testAccount">
+
+                                <div class="form-group form-group-sm">
+                                    <div class="input-group col-xs-12 col-sm-12 col-md-12 col-lg-12">
+                                        <select name="username" class="form-control">
+                                            <volist name="testAccount"  id="vo">
+                                                <option value="{$key}">{$key}-{$vo['roledesc']}</option>
+                                            </volist>
+                                        </select>
+                                    </div>
+                                </div>
+
+                                <else/>
+                                <div class="form-group form-group-sm ">
+                                    <div class="input-group col-xs-12 col-sm-12 col-md-12 col-lg-12">
+                                        <input type="text" class="required form-control  username" name="username" placeholder="{:L('PLACEHOLDER_USERNAME')}" />
+                                        <i class="fa fa-user"></i>
+                                    </div>
+                                </div>
+                                <div class="form-group form-group-sm">
+                                    <div class="input-group col-xs-12 col-sm-12 col-md-12 col-lg-12">
+                                        <input type="password" class="form-control required password" name="password" placeholder="{:L('PLACEHOLDER_PASSWORD')}" /><i class="fa fa-lock"></i>
+                                    </div>
+                                </div>
+                                <div class="form-group form-group-sm">
+                                    <div class="input-group col-xs-12 col-sm-12 col-md-12 col-lg-12">
+                                        <input type="text" class="form-control required verify" name="verify" placeholder="{:L('PLACEHOLDER_VERIFY')}" /><i class="fa fa-barcode"></i>
+                                    </div>
+                                </div>
+
+                                <div class="form-group form-group-sm ">
+                                    <div class="input-group clearfix col-xs-12 col-sm-12 col-md-12 col-lg-12">
+                                        <img onclick="refresh_verify('.verifyimg');" src="{:U('Admin/Public/verify',array('r'=>time()))}" class="verifyimg"  alt="验证码" title="点击换一张"/>
+                                    </div>
+                                </div>
+                            </notempty>
 							<div class="form-group form-group-sm">
 								<button type="button" url="{:U('Admin/Public/checkLogin')}" target-form="loginForm" data-loading-text="{:L('BTN_LOGIN')}..." class="ajax-post btn btn-primary col-xs-12 col-sm-12 col-md-12 col-lg-12" autofocus="autofocus">
 {:L('BTN_LOGIN')}</button>
