--- a/Public/cdn/theme/fix_flatly.css
+++ b/Public/cdn/theme/fix_flatly.css
@@ -1,12 +1,19 @@
-/*调整simplex样式*/
+
+/*
+ * 调整flatly样式
+ * 2015-05-19 (c) Copyright 2015 hebidu. All Rights Reserved. 
+ */
 
 
-.admin-header .avatar {
+.theme-flatly .admin-header .avatar {
 	height: 50px;
 	padding-top: 15px;
 }
-.admin-main {
+.theme-flatly .admin-main {
 	margin-top: 60px;
+}
+.theme-flatly .bg-info{
+	color:#fff;
 }
 
 
@@ -26,3 +33,4 @@
 /* 大屏幕（大桌面显示器，大于等于 1200px） */
 @media (min-width: 1200px) {
 	}
+	
