移动项目Api文件到各模块内

--- a/Application/Admin/View/default/WxshopProduct/group.html
+++ b/Application/Admin/View/default/WxshopProduct/group.html
@@ -24,7 +24,7 @@
 					<div class="form-group">
 						<label for="btns" class="col-md-2 col-lg-2 control-label">&nbsp;</label>
 						<div class="col-lg-10 col-md-10">
-							<a target-form="validateForm" class="ajax-post btn-sm btn btn-primary" href="{:U('Admin/WxproductGroup/add')}" autofocus="autofocus"><i class="fa fa-save"></i> {:L('BTN_SAVE')}</a>
+							<a target-form="validateForm" class="ajax-post btn-sm btn btn-primary" href="{:U('Admin/ProductGroup/add')}" autofocus="autofocus"><i class="fa fa-save"></i> {:L('BTN_SAVE')}</a>
 							<a class="btn btn-default btn-sm " href="{:U('Admin/WxshopProduct/index',array('storeid'=>$storeid))}"><i class="fa fa-reply"></i>返回</a>
 						</div>
 					</div>
@@ -42,7 +42,7 @@
 					<div class="form-group">
 						<label for="btns" class="col-md-2 col-lg-2 control-label">&nbsp;</label>
 						<div class="col-lg-10 col-md-10">
-							<a target-form="validateForm" class="ajax-post btn-sm btn btn-primary" href="{:U('Admin/WxproductGroup/add')}" autofocus="autofocus"><i class="fa fa-save"></i> {:L('BTN_SAVE')}</a>
+							<a target-form="validateForm" class="ajax-post btn-sm btn btn-primary" href="{:U('Admin/ProductGroup/add')}" autofocus="autofocus"><i class="fa fa-save"></i> {:L('BTN_SAVE')}</a>
 							<a class="btn btn-default btn-sm " href="{:U('Admin/WxshopProduct/index',array('storeid'=>$storeid))}"><i class="fa fa-reply"></i>返回</a>
 						</div>
 					</div>
