后台基础搭建基本完成，

--- a/Application/Admin/View/default/Banners/add.html
+++ b/Application/Admin/View/default/Banners/add.html
@@ -1,6 +1,8 @@
 <extend name="template/base_index" />
 
 <block name="area_header">
+    <link rel="stylesheet" type="text/css" media="all" href="__CDN__/jquery-datetimepicker/jquery.datetimepicker.css">
+    <script type="text/javascript" src="__CDN__/jquery-datetimepicker/jquery.datetimepicker.js"></script>
 	<link rel="stylesheet" type="text/css" href="__CDN__/comp/wxuploader.css" />
 	<link type="text/css" rel="stylesheet" href="__CDN__/jquery-uploadify/3.2.1/uploadify.css" />
 	<script type="text/javascript" src="__CDN__/jquery-uploadify/3.2.1/jquery.uploadify.min.js"></script>
