--- a/Application/Admin/View/default/Member/index.html
+++ b/Application/Admin/View/default/Member/index.html
@@ -75,7 +75,7 @@
 						<td>
 							{$vo.uid}</td>
 						<td>
-							{$vo.nickname}</td>
+                            <a href="{:U('Admin/Member/view',array('id'=>$vo['uid']))}">{$vo.nickname}</a></td>
 						<td>
 							{$vo.score}</td>
 						<td>
