--- a/Application/Admin/View/default/Wxshop/index.html
+++ b/Application/Admin/View/default/Wxshop/index.html
@@ -65,7 +65,7 @@
 										{$vo.wxno}
 									</td>							
 									<td>
-										{$vo.createtime|date='Y-m-d h:i:s',###}
+										{$vo.create_time|date='Y-m-d h:i:s',###}
 									</td>			
 									<!--<td>
 										{:($vo['isopen'] == "1"?"营业中":"休息中")}
