--- a/Application/Admin/View/default/WxuserGroup/edit.html
+++ b/Application/Admin/View/default/WxuserGroup/edit.html
@@ -29,7 +29,7 @@
 					<div class="form-group">
 						<label for="inputtitle" class="col-md-2 col-lg-2 control-label">描述</label>
 						<div class="col-md-10 col-lg-10">
-							<textarea  value="{$vo.description}" class="form-control input-short" name="description"></textarea> 
+							<textarea class="form-control input-short" name="description">{$vo.description}</textarea>
 							<div class="help-block">(会员组描述)</div>
 						</div>
 					</div>
