--- a/Application/Admin/View/default/Index/tradeIndex.html
+++ b/Application/Admin/View/default/Index/tradeIndex.html
@@ -37,9 +37,13 @@
         {:W('Menus/left')}
 		<div class="admin-main-content">
             {:W('Menus/breadcrumb')}
+            <div class="col-lg-6 col-md-6 col-lg-offset-3 col-md-offset-3">
+
             <ul class="list-group float-circle clearfix">
                 <li class="list-group-item"><a href="{:U('Admin/Withdraw/verify')}">待审核<span class="badge">12</span></a></li>
             </ul>
+
+            </div>
 		</div>
 
 	</div>
