--- a/Application/Admin/View/default/Orders/sure.html
+++ b/Application/Admin/View/default/Orders/sure.html
@@ -5,6 +5,7 @@
 	<script type="text/javascript" src="__CDN__/jquery-datetimepicker/jquery.datetimepicker.js"></script>
 	<link type="text/css" rel="stylesheet" href="__CDN__/select2/4.0.0/css/select2.min.css" />
 	<link type="text/css" rel="stylesheet" href="__CDN__/select2/4.0.0/css/cosmo-skin.css" />
+    <script type="text/javascript" src="__CDN__/sco1.0.2-8/js/sco.countdown.js"></script>
 </block>
 
 <block name="area_body">
@@ -34,7 +35,7 @@
 						</div>
 
 						<button type="submit" class="btn btn-default"><i class="fa fa-search"></i>{:L('BTN_SEARCH')}</button>
-						<button type="button" id="autoRefresh" class="btn btn-warning"><i class="fa fa-refresh"></i><span>自动刷新</span></button>
+						<button type="button" id="autoRefresh" class="btn btn-warning"><i class="fa fa-refresh"></i><span class="txt">自动刷新</span><span class="countdown"></span></button>
 					</div>
 					<div class="form-group row col-lg-12 col-md-12">
 						<div class="input-group " style="  width: 860px;">
@@ -222,27 +223,31 @@
 		}
 		
 		$(function(){
+            var refresh = 10000;
 			$(".payStatus").click(function(){
 				$(".searchForm").submit();
 			});
 			cancelOrder();
+            var until =  {:(time()+10)};
 			var refreshFlag = $.cookie('autoRefresh'); 
 			if(refreshFlag == "true"){
+                $('#autoRefresh .countdown').scojs_countdown({until: until});
 				var interval = setTimeout(function(){
 					autoRefresh();
-				},10000);
-				$("#autoRefresh span").text("停止刷新");
+				},refresh);
+				$("#autoRefresh .txt").text("停止刷新");
 				$("#autoRefresh i").removeClass("fa-refresh").addClass("fa-times-circle");
 			}
+
 			$("#autoRefresh").click(function(){
 				var refreshFlag = $.cookie('autoRefresh'); 
 				if(refreshFlag == "true"){
-					$("#autoRefresh span").text("自动刷新");
+					$("#autoRefresh .txt").text("自动刷新");
 					$("#autoRefresh i").addClass("fa-refresh").removeClass("fa-times-circle");
 					$.cookie("autoRefresh","false");
 				}else{
 					$.cookie("autoRefresh","true");
-					$("#autoRefresh span").text("停止刷新");
+					$("#autoRefresh .txt").text("停止刷新");
 					$("#autoRefresh i").removeClass("fa-refresh").addClass("fa-times-circle");
 				}
 				
