--- a/Application/Admin/View/default/Withdraw/verify.html
+++ b/Application/Admin/View/default/Withdraw/verify.html
@@ -20,11 +20,10 @@
                         <div class="input-group">
                             <div class="input-group-addon"><i class="fa fa-user"></i>提现用户</div>
                             <select style="width:220px;padding: 10px 15px;font-size: 15px;line-height: 1.42857143;" id="user_select2" name="uid" class="form-control">
-
+                                    <option></option>
                             </select>
                             &nbsp;
-                            <a class="btn btn-sm btn-primary ajax-get" href="{:U('Admin/Withdraw/verify')}" target-form="searchForm"><i class="fa fa-search"></i>查询</a>
-
+                            <button class="btn btn-sm btn-primary" type="submit">查询</button>
                         </div>
                     </div>
                     <div class="form-group">
@@ -39,10 +38,13 @@
                             用户ID
                         </th>
                         <th>
-                            用户昵称
+                            提现账户姓名
                         </th>
                         <th>
-                            账户余额
+                            提现账户类型
+                        </th>
+                        <th>
+                            提现账户号
                         </th>
                         <th>
                             提现金额
@@ -53,25 +55,31 @@
 
                     </thead>
                     <tbody>
+                    <volist name="list" id="vo">
                         <tr>
                             <td>
-                                用户ID
+                                {$vo.id}
                             </td>
                             <td>
-                                用户昵称
+                                <a title="查看用户详细信息" href="{:U('Admin/Withdraw/viewAccount',array('id'=>$vo['uid']))}">{$vo.account_name}</a>
                             </td>
                             <td>
-                                账户余额
+                                {$vo._account_type}
                             </td>
                             <td>
-                                提现金额
+                                {$vo.cash_account}
                             </td>
                             <td>
-                                <a href="#" class="btn btn-primary btn-sm ajax-get"><i class="fa fa-check"></i>通过</a> <a class="btn btn-sm btn-danger" href="#"><i class="fa fa-times"></i>驳回</a>
+                                {$vo.money}
+                            </td>
+                            <td>
+                                <a href="{:U('Admin/Withdraw/pass',array('id'=>$vo['id']))}" class="btn btn-primary btn-sm ajax-get"><i class="fa fa-check"></i>通过</a> <a class="btn btn-sm btn-danger" href="{:U('Admin/Withdraw/pass',array('id'=>$vo['id']))}"><i class="fa fa-times"></i>驳回</a>
                             </td>
                         </tr>
+                    </volist>
                     </tbody>
                 </table>
+                <div>{$show}</div>
             </div>
 
         </div>
