--- a/Application/Admin/View/default/Wxuser/view.html
+++ b/Application/Admin/View/default/Wxuser/view.html
@@ -13,17 +13,23 @@
 			<div>
 				<form class="">
 					<legend>用户信息查看</legend>
+                    <div class="form-group  col-lg-12 col-md-12">
+                        <label class="control-label col-lg-2 col-md-2">&nbsp;</label>
+                        <div class="col-lg-10 col-md-10">
+                            <a class="btn btn-sm btn-primary"  href="javascript:history.back(-1);"><i class="fa fa-reply"></i>返回</a>
+                        </div>
+                    </div>
 					<div class="form-group  col-lg-12 col-md-12">
 						<label class="control-label col-lg-2 col-md-2">会员昵称</label>
 						<div class="col-lg-10 col-md-10">
-							<img style="width:60px" src="{$vo.avatar}" /> {$vo.nickname}
+							<img style="width:80px;" src="{$vo.avatar}" /> {$vo.nickname}
 						</div>
 					</div>
 
 					<div class="form-group   col-lg-12 col-md-12">
 						<label class="control-label col-lg-2 col-md-2">性别</label>
 						<div class="col-lg-10 col-md-10">
-							{:getSex($vo['sex'])}
+							{:($vo['sex'] == 0?"女":"男")}
 						</div>
 					</div>
 					
@@ -40,6 +46,12 @@
 							{$vo.subscribe_time|date='Y-m-d H:i:s',###}
 						</div>
 					</div>
+                    <div class="form-group  col-lg-12 col-md-12">
+                        <label class="control-label col-lg-2 col-md-2">&nbsp;</label>
+                        <div class="col-lg-10 col-md-10">
+                            <a class="btn btn-sm btn-primary" href="javascript:history.back(-1);"><i class="fa fa-reply"></i>返回</a>
+                        </div>
+                    </div>
 				</form>
 			</div>
 		</div>
