--- a/Application/Admin/View/default/WxuserGroup/powerEdit.html
+++ b/Application/Admin/View/default/WxuserGroup/powerEdit.html
@@ -16,7 +16,7 @@
 					<input type="hidden" name="id" value="{$access.id}" />
 					<fieldset>
 						<legend>
-							用户组权限编辑
+							[{$vo.name}]权限编辑
 						</legend>
 						<div class="form-group">
 							<div class="col-lg-12 col-md-12">
@@ -24,6 +24,14 @@
 								<a class="btn btn-sm btn-default" href="{:U('Admin/WxuserGroup/index')}"><i class="fa fa-reply"></i>返回</a>
 							</div>
 						</div>
+                        <hr>
+                        <div class="form-group">
+                            <label class="col-lg-2 col-md-2 control-label">提成比例</label>
+                            <div class="col-lg-10 col-md-10">
+                                <input type="text" class="text-right" name="percent" value="{:($access['percent']*100.0)}"  >%
+                            </div>
+                        </div>
+
 						<div class="form-group">
 							<div class="col-lg-12 col-md-12">
 								<div class="checkbox">
@@ -42,7 +50,8 @@
 								</div>
 							</div>
 						</div>
-						
+
+                        <hr>
 						<div class="form-group">
 							<div class="col-lg-12 col-md-12">
 								<a target-form="powerForm" class="btn btn-sm btn-primary ajax-post" href="{:U('Admin/WxuserGroup/powerEdit')}"><i class="fa fa-save"></i>保存</a>
