--- a/Application/Shop/View/style1/Index/distributor.html
+++ b/Application/Shop/View/style1/Index/distributor.html
@@ -1,65 +1,61 @@
+<extend name="template/base_index" />
 
-
-
-<!DOCTYPE html>
-<html>
-<head>
-
-    <base href="{:C('SITE_URL')}/" />
+<block name="area_header">
+	 <base href="{:C('SITE_URL')}/" />
 
     <meta charset="utf-8">
-    <title>分销中心</title>
-    <meta name="viewport" content="initial-scale=1.0;width=device-width,user-scalable=no" />
+  <!--  <title>分销中心</title>-->
+   <!-- <meta name="viewport" content="initial-scale=1.0;width=device-width,user-scalable=no" />-->
 
-    <link rel="stylesheet" type="text/css" href="__CDN__/amazeui/2.3.0/css/amazeui.min.css"/>
+    <!--<link rel="stylesheet" type="text/css" href="__CDN__/amazeui/2.3.0/css/amazeui.min.css"/>-->
     <link rel="stylesheet" type="text/css" href="__CSS__/distributor_add.css?v=__APP_VERSION__"/>
-    <script type="text/javascript" src="__CDN__/jquery/2.1.1/jquery.min.js"></script>
     <script type="text/javascript">
-        function checked() {
-            //alert('测试');
-            return false;
-        }
+       
     </script>
 
-</head>
+</block>
 
-<body style="background: #F1F5FB">
+<block name="area_body">
 
-<div class="div_logo">
+		<div class="div_logo">
+		
+		</div>
+		<div class="div_main">
+		    <p>欢迎加入<font color="#F0005E">KISSLADY卡诗兰</font>,请填写申请信息！</p>
+		
+		    <p>邀请人：<font color="#F0005E">总部</font>（请核对）</p>
+		
+		    <form class="validate_form"  >
+		        <p><input type="text" name="name" class="am-form-field am-radius required" placeholder="请填写真实姓名,用与佣金结算"/></p>
+		
+		        <p><input type="text" name="tel" class="am-form-field am-radius" placeholder="请填写手机号码方便联系"/></p>
+		
+		        <p><input type="text" name="city" class="am-form-field am-radius" placeholder="请填写所在城市"/></p>
+		        <button type="button" url="{:U('Shop/Index/distributor')}" target-form="validate_form"  class="am-btn am-btn-primary am-btn-block ajax-get">申请成为分销商</button>
+		    </form>
+		    <p style="font-size: 25px; color: #999;margin-top:50px;">分销商特权</p>
+		    <ul>
+		        <li>
+		            <font class="am-icon-home am-icon-lg" color="#F04124"></font>
+		
+		            <div><p class="p_first">独立微店</p>
+		
+		                <p class="p_second">拥有自己的微店及推广二维码</p></div>
+		        </li>
+		        <li>
+		            <font class="am-icon-yen  am-icon-lg" color="#008000" style="margin-left: 35px;"></font>
+		
+		            <div><p class="p_first">销售拿佣金</p>
+		
+		                <p class="p_second">微店卖出商品，您可以获得佣金</p></div>
+		        </li>
+		        <li class="li_last">分销商的商品销售统一由厂家直接收款、直接发货、并提供产品的售后服务，分销佣金由厂家统一设置。</li>
+		    </ul>
+		    {:tag('pageFooter')}
+		</div>
 
-</div>
-<div class="div_main">
-    <p>欢迎加入<font color="#F0005E">KISSLADY卡诗兰</font>,请填写申请信息！</p>
+</block>
 
-    <p>邀请人：<font color="#F0005E">总部</font>（请核对）</p>
+<block name="area_footer">
 
-    <form action="#" onsubmit="return checked()">
-        <p><input type="text" class="am-form-field am-radius" placeholder="请填写真实姓名,用与佣金结算"/></p>
-
-        <p><input type="text" class="am-form-field am-radius" placeholder="请填写手机号码方便联系"/></p>
-
-        <p><input type="text" class="am-form-field am-radius" placeholder="请填写所在城市"/></p>
-        <button type="submit" class="am-btn am-btn-primary am-btn-block">申请成为分销商</button>
-    </form>
-    <p style="font-size: 25px; color: #999;margin-top:50px;">分销商特权</p>
-    <ul>
-        <li>
-            <font class="am-icon-home am-icon-lg" color="#F04124"></font>
-
-            <div><p class="p_first">独立微店</p>
-
-                <p class="p_second">拥有自己的微店及推广二维码</p></div>
-        </li>
-        <li>
-            <font class="am-icon-yen  am-icon-lg" color="#008000" style="margin-left: 35px;"></font>
-
-            <div><p class="p_first">销售拿佣金</p>
-
-                <p class="p_second">微店卖出商品，您可以获得佣金</p></div>
-        </li>
-        <li class="li_last">分销商的商品销售统一由厂家直接收款、直接发货、并提供产品的售后服务，分销佣金由厂家统一设置。</li>
-    </ul>
-    {:tag('pageFooter')}
-</div>
-</body>
 </html>
