--- a/Public/Shop/css/distributor_add.css
+++ b/Public/Shop/css/distributor_add.css
@@ -1,7 +1,7 @@
 
-html {
+/*html {
     font-size: 12px;
-}
+}*/
 
 ul, li {
     list-style: none;
@@ -12,7 +12,7 @@ ul, li {
 .div_logo {
     background: red;
     width: 100%;
-    height: 160px;
+    height: 3rem;
 }
 
 .div_main {
@@ -21,43 +21,52 @@ ul, li {
 }
 
 .div_main input {
-    font-size: 12px;
+    font-size: 0.5rem;
+}
+
+.div_main form  p {
+    margin-top: 0.2rem;
 }
 
 .div_main button {
-    font-size: 12px;
-    border-radius: 12px;
+    font-size: 0.5rem;
+    border-radius: 0.2rem;
+    margin-top: 0.2rem;
 }
 
 .div_main ul li {
     width: 100%;
-    height: 150px;
+    height: 2rem;
     background: #ffffff;
-    margin-top: 2px;
+    margin-top: 0.02rem;
 }
 
 .div_main ul li font {
     margin-left: 20px;
     margin-top: 20px;
     float: left;
+    font-size:0.5rem;
 }
 
 .div_main ul li div {
-    margin-left: 150px;
+    margin-left:1.6rem;
 }
 
 .div_main ul li div .p_first {
-    padding-top: 10px;
+   /* padding-top:0.3rem;*/
+  font-weight: bold;
+  padding-top: 0.3rem;
 }
 
 .div_main ul li div .p_second {
-    font-size: 12px;
+    font-size: 0.3rem;
+    margin-top: 0.3rem;
     color: #999;
-    margin-top: -20px;
+   
 }
 
 .div_main ul li.li_last {
-    padding: 10px;
-    font-size: 35px;
+    padding:0.2rem;
+    font-size: 0.35rem;
     color: #ccc
 }
