--- a/Application/Admin/View/default/Store/edit.html
+++ b/Application/Admin/View/default/Store/edit.html
@@ -2,8 +2,6 @@
 
 
 <block name="area_header">
-    <!--<script type="text/javascript" charset="utf-8" src="__CDN__/ueditor/1.4.3/ueditor.config.js"></script>
-    <script type="text/javascript" charset="utf-8" src="__CDN__/ueditor/1.4.3/ueditor.all.min.js"> </script>-->
 
 	<link type="text/css" rel="stylesheet" href="__CDN__/comp/wxuploader.css?v=__APP_VERSION__" />
 	<link type="text/css" rel="stylesheet" href="__CDN__/jquery-uploadify/3.2.1/uploadify.css" />
@@ -36,6 +34,7 @@
   .select2-container--default .select2-search--dropdown .select2-search__field{
   	color:#444;
   }
+		
   	.wxnumber-item{
   		  background: #DFC2C2;
 		  width: auto;
@@ -48,9 +47,6 @@
   		cursor: pointer;
   	}
   	
-  	.modal-backdrop,.modal-dialog {
-  		z-index: 0;
-	}
 		.tangram-suggestion-main{
 			z-index: 123456789;	
 		}
@@ -66,40 +62,44 @@
 		
 			<!-- 带验证 form -->
 			<form class="form-horizontal well validateForm" >
+				<input  type="hidden" name="id" value="{$store.id}" />
 				<fieldset>
 					<legend>
 						创建店铺</legend>
 					<div class="form-group">
 						<label for="inputtitle" class="col-md-2 col-lg-2 control-label">店铺名称</label>
 						<div class="col-md-10 col-lg-10">
-							<input type="text" class="required form-control input-short" name="name" id="inputtitle" placeholder="请输入店铺名称">
+							<input type="text" class="required form-control input-short" value="{$store.name}" name="name" id="inputtitle" placeholder="请输入店铺名称">
 							<div class="help-block">(店铺名称)</div>
 						</div>
 					</div>
 					<div class="form-group">
 						<label for="inputservice_phone" class="col-md-2 col-lg-2 control-label">店铺主微信号：</label>
 						<div class="col-md-10 col-lg-10">
-							<input type="text" class="required form-control input-short" name="wxno" id="" placeholder="请输入店铺主微信号">
+							<input type="text" class="required form-control input-short" name="wxno" value="{$store.wxno}" id="" placeholder="请输入店铺主微信号">
 							<div class="help-block">(请输入店铺微信号，可在微信的个人中心查看)</div>
 						</div>
 					</div>
 					<div class="form-group">
 						<label for="inputservice_phone" class="col-md-2 col-lg-2 control-label">客服电话</label>
 						<div class="col-md-10 col-lg-10">
-							<input type="text" class="required form-control input-short" name="service_phone" id="inputservice_phone" placeholder="请输入客服电话">
+							<input type="text" class="required form-control input-short" value="{$store.service_phone}" name="service_phone" id="inputservice_phone" placeholder="请输入客服电话">
 							<div class="help-block">(请输入客服电话)</div>
 						</div>
 					</div>
-					<div class="form-group am-hide">
+					<div class="form-group">
 						<label for="inputweixin_number" class="col-md-2 col-lg-2 control-label">客服微信号</label>
 						<div class="col-md-10 col-lg-10">
-							<input type="hidden" class="required form-control input-short" name="weixin_number" id="inputweixin_number" >
+							<input type="hidden" class="required form-control input-short" name="weixin_number" value="{$openids}" id="inputweixin_number" >
 							<input type="hidden" class="required form-control input-short" name="weixin_number_name" id="inputweixin_number_name" >
 							
 							<div class="js_weixin_number_list well">
 								<select id="user_select2" style="width:240px">
 									
 								</select>
+								<volist name="weixin" id="vo">
+									<div class='wxnumber-item' data-id="{$vo->id}">{$vo->name}<i class='fa fa-times js_removed'></i></div>
+								</volist>
 							</div>
 							
 							<div class="help-block">(请选择客服微信号，必须先关注本公众号,不要超过5个)</div>
@@ -110,8 +110,14 @@
 						<label for="inputtitle" class="col-md-2 col-lg-2 control-label">店铺logo</label>
 						<div class="col-md-10 col-lg-10">
 							<input type="hidden" class="required form-control input-short" name="logo" id="inputlogo" placeholder="请输入店铺logo、头像。">
-							<div class="wxuploaderimg clearfix logo"  data-maxitems="1">
+							<div class="wxuploaderimg clearfix logo <notempty name="store.logo">checked</notempty>"  data-maxitems="1">
 								<div class="img-preview clearfix" >
+									<notempty name="store.logo">
+											<div class="pull-left clearfix img-item">
+												<img src="{$store.logo}" />
+												<div class="edit_pic_wrp"><a href="javascript:;" class="fa fa-lg fa-trash js_delete"></a></div>
+											</div>
+									</notempty>
 								</div>
 								<div class="add">
 									<i class="fa fa-plus"></i>
@@ -124,7 +130,7 @@
 						<label for="inputtitle" class="col-md-2 col-lg-2 control-label">店铺类别</label>
 						<div class="col-md-10 col-lg-10">
 							<select name="store_type" class="form-control input-short">
-							{:W('Partials/datatree',array(C('DATATREE.STORE_TYPE'),true))}
+							{:W('Partials/datatree',array(C('DATATREE.STORE_TYPE'),true,$store['cate_id']))}
 							</select>
 							<div class="help-block">(店铺名称)</div>
 						</div>
@@ -133,8 +139,14 @@
 						<label for="inputtitle" class="col-md-2 col-lg-2 control-label">店铺Banner</label>
 						<div class="col-md-10 col-lg-10">
 							<input type="hidden" class="required form-control input-short" name="banner" id="inputbanner" placeholder="请输入店铺Banner">
-							<div class="wxuploaderimg clearfix banner"  data-maxitems="1">
+							<div class="wxuploaderimg clearfix banner <notempty name="store.banner">checked</notempty>"  data-maxitems="1">
 								<div class="img-preview clearfix" >
+										<notempty name="store.banner">
+											<div class="pull-left clearfix img-item">
+												<img src="{$store.banner}" />
+												<div class="edit_pic_wrp"><a href="javascript:;" class="fa fa-lg fa-trash js_delete"></a></div>
+											</div>
+									</notempty>
 								</div>
 								<div class="add">
 									<i class="fa fa-plus"></i>
@@ -144,19 +156,21 @@
 						</div>
 					</div>
 					
+					
 					<div class="form-group baidumap_position">
 						<label for="inputtitle" class="col-md-2 col-lg-2 control-label">店铺经纬度</label>
 						<div class="col-md-10 col-lg-10">
-							经度<input type="text" value="" name="lng" class="lng" />,纬度<input type="text" value="" name="lat" class="lat"  />
+							经度<input type="text" value="{$store.longitude}" name="lng" class="lng" />,纬度<input type="text" value="{$store.latitude}" name="lat" class="lat"  />
 							<button type="button" class="js_baidumap btn btn-primary btn-sm" data-toggle="modal" data-target="#baidumap" >点击选择百度地图</button>
 							<a href="http://api.map.baidu.com/lbsapi/getpoint/index.html" target="_blank" class="btn btn-primary btn-sm">跳转到百度拾取</a>
 						</div>
 					</div>
 					
+					
 					<div class="form-group">
 						<label for="inputtitle" class="col-md-2 col-lg-2 control-label">店铺简介</label>
 						<div class="col-md-10 col-lg-10">
-							<textarea name="notes" class="form-control" rows="5"></textarea>
+							<textarea name="notes" class="form-control" rows="5">{$store.notes}</textarea>
 							<div class="help-block">(您可以输入店铺简介)</div>
 						</div>
 					</div>
@@ -171,7 +185,7 @@
 					<div class="form-group">
 						<label for="btns" class="col-md-2 col-lg-2 control-label">&nbsp;</label>
 						<div class="col-lg-10 col-md-10">
-							<a target-form="validateForm" class="ajax-post btn btn-primary" onclick="return getData();" href="{:U('Admin/Wxshop/add')}" autofocus="autofocus"><i class="fa fa-save"></i> {:L('BTN_SAVE')}</a>
+							<a target-form="validateForm" class="ajax-post btn btn-primary" onclick="return getData();" href="{:U('Admin/Wxshop/edit')}" autofocus="autofocus"><i class="fa fa-save"></i> {:L('BTN_SAVE')}</a>
 							<a class="btn btn-default" href="{:U('Admin/Wxshop/index')}"><i class="fa fa-times-circle"></i> {:L('BTN_CANCEL')}</a>
 						</div>
 					</div>
@@ -183,9 +197,7 @@
 			<script type="text/javascript" src="__CDN__/select2/4.0.0/js/i18n/zh-CN.js"></script>
 			<script type="text/javascript" src="__CDN__/jquery-uploadify/3.2.1/jquery.uploadify.min.js"></script>
 			<include file="template/wxpicture" />
-			
 			<include file="template/baidumap" />
-			
 		</div>
 		<!-- END admin-main-content -->
 	</div>
@@ -194,18 +206,10 @@
 
 <block name="area_footer">
 	
-	
+    <!--<script type="text/javascript" charset="utf-8" src="__CDN__/ueditor/1.4.3/ueditor.config.js"></script>
+    <script type="text/javascript" charset="utf-8" src="__CDN__/ueditor/1.4.3/ueditor.all.min.js"> </script>-->
 <script type="text/javascript">
-           
-    //实例化编辑器
-    //建议使用工厂方法getEditor创建和引用编辑器实例，如果在某个闭包下引用该编辑器，直接调用UE.getEditor('editor')就能拿到相关的实例
-//  var ue = UE.getEditor('ueditor',{
-//  	toolbars:[
-//      ['fullscreen', 'source', 'undo', 'redo', 'bold','italic', 'underline', 'fontborder', 'strikethrough', 'superscript', 'subscript', '|','lineheight'
-//     , 'fontsize', 'insertimage','emotion','link', 'unlink', 'anchor', '|','map','print', 'preview',  'drafts'
-//      ]
-//  ]});
-    
+	
 	function getData(){
 		var logo = $(".wxuploaderimg.logo img").attr("src");
 		var banner = $(".wxuploaderimg.banner img").attr("src");
@@ -220,8 +224,8 @@
 			
 		});
 		
-		return true;
 		
+		return true;		
 	}
 	
 	function appendWeixinNumber(weixin,openid){
@@ -251,7 +255,10 @@
 		
 	}
 	
+	
+	
 	$(function(){
+		
 		$(".js_weixin_number_list").click(function(ev){
 			$ele = $(ev.target);
 			if($ele.hasClass("js_removed")){
@@ -261,11 +268,10 @@
 		
 		wxuploadimg.init({cont:".wxuploaderimg"});
 		
+		//百度地图-坐标选择
 		$(".baidumap_position").baidumap();
-		
-		
 		$("#user_select2").select2({
-			placeholder: "输入用户id或昵称查询"	,
+			placeholder: "可以输入用户id或昵称查询"	,
 			language: "zh-CN",
 			ajax: {
 			    url: "{:U('Wxuser/select')}",
@@ -283,9 +289,6 @@
 			    		data.info = new Array();
 			    		data.info['nodata']="无相关数据";
 			    	}
-			      	// parse the results into the format expected by Select2.
-			      	// since we are using custom formatting functions we do not need to
-			      	// alter the remote JSON data
 			      	return {
 			        	results: data.info
 			      	};
@@ -293,7 +296,7 @@
 			    cache: true
 		  	}, 
 			  	minimumInputLength: 0,
-				templateSelection: function (repo) {	
+				templateSelection: function (repo) {
 					var selection = repo.nickname || repo.text;
 					if(repo.nickname){
 						var openid = repo.openid;
@@ -309,7 +312,7 @@
 			   		
       				if (repo.loading) return repo.text;
 					if(repo.nodata) return repo.nodata;
-//    				var markup = '<div>'+repo.nickname+'</div>';
+
       				var markup = '<div><img src="'+repo.avatar+'" style="width:30px;height:30px;"/>[id:'+repo.id+'] '+repo.nickname+'</div>';
       				return markup;
     			},
