--- a/Application/Shop/View/style1/template/base_index.html
+++ b/Application/Shop/View/style1/template/base_index.html
@@ -4,6 +4,7 @@
 <head>
     <meta charset="utf-8">
     <title>{$meta_title|default='杭州博也网络科技'}</title>
+     <script type="text/javascript" src="__CDN__/jquery_validation/1.13.1/localization/jquery.validate.js">  </script>
     <meta name="keywords" content="{$seo.keywords|default="
     "}" />
     <meta name="description" content="{$seo.description|default="
