--- a/Application/Admin/View/default/Wxuser/sendText.html
+++ b/Application/Admin/View/default/Wxuser/sendText.html
@@ -17,7 +17,7 @@
 					<label class="control-label col-lg-2 col-md-2">选择用户</label>
 					<div class="col-lg-10 col-md-10">
 						<select style="width:220px;padding: 10px 15px;font-size: 15px;line-height: 1.42857143;" id="user_select2" name="uid" class="form-control">
-							<option >{$vo.nickname}</option>
+							<option value="{$vo.id}">{$vo.nickname}</option>
 						</select>
 					</div>
 				</div>
