--- a/Application/Admin/View/default/Wxuser/distribution.html
+++ b/Application/Admin/View/default/Wxuser/distribution.html
@@ -26,7 +26,7 @@
                             <input type="text" name="nickname" class="form-control" value="{$nickname}" />
                         </div>
                     </div>
-                    <div class="form-group">
+                    <div class="form-group hide">
                         <div class="input-group">
                             <div class="input-group-addon">
                                 关注时间
