--- a/Application/Shop/View/style1/Index/index.html
+++ b/Application/Shop/View/style1/Index/index.html
@@ -183,11 +183,10 @@
 <body class="theme-default theme-shop ">
 	
 
-	<if  condition="$showstartpage and !empty(C('SHOP_START_PAGE'))">
-		<div class="start-page">
-			<img class="am-responsive-width" src="{:C('SHOP_START_PAGE')}"  />
-		</div>
-	</if>
+	
+	
+	
+	
 	
 	<header class="am-header am-header-default grid">
 	  <div class="logo col-2">
@@ -322,7 +321,7 @@
 				</div>
 		</volist>
 	</div>
-	<include  file="partial/footermenu" />
+	<include  file="style1/partial/footermenu" />
 	<footer data-am-widget="footer" class="am-footer am-footer-default" data-am-footer="{  }">
 			<div class="am-footer-switch">
 			</div>
