--- a/Application/Shop/View/style1/Product/search.html
+++ b/Application/Shop/View/style1/Product/search.html
@@ -215,7 +215,7 @@
 </block>
 
 <block name="area_footer">
-	
+	<include file="style1/partial/footermenu" />
 	<script type="text/javascript">
 		
 		function appendItem(item){
