--- a/Application/Shop/View/style1/ShoppingCart/index.html
+++ b/Application/Shop/View/style1/ShoppingCart/index.html
@@ -178,7 +178,7 @@
 </block>
 
 <block name="area_footer">
-	<include file="partial/footermenu" />
+	<include file="style1/partial/footermenu" />
 	<script>
 	//变更商品数目，选择商品时 计算商品总价
 	
