--- a/Application/Shop/View/style1/User/info.html
+++ b/Application/Shop/View/style1/User/info.html
@@ -203,6 +203,6 @@
 </block>
 
 <block name="area_footer">
-	<include file="partial/footermenu" />
+	<include file="style1/partial/footermenu" />
 </block>
 
