--- a/Application/Shop/View/style1/Index/distributor.html
+++ b/Application/Shop/View/style1/Index/distributor.html
@@ -13,22 +13,25 @@
       <script type="text/javascript" src="__CDN__/jquery-validation/1.13.1/jquery.validate.min.js"> </script> 
 	<script type="text/javascript" src="__CDN__/jquery-validation/1.13.1/localization/messages_zh.js"></script>
 	<script type="text/javascript">
-	$(function(){
-		/*$.validator.addMethod('mobile', function( value, element ){
-		 
-		    // /^1\d{10}$/ 来自支付宝的正则
-		    return this.optional( element ) || /^1\d{10}$/.test( value );
-		 
-		}, '请输入正确的手机号码');
-		*/
+		$(function(){
+			jQuery.validator.addMethod("mobile", function (value, element) {
+			    var mobile = /^1[3|4|5|7|8]\d{9}$/;
+				return this.optional(element) || (mobile.test(value));
+			}, "手机格式不对");
+		})
+	
+	/*function toSubmit(){
+		$.ajax({
+			type:"post",
+			url:"{:U('Shop/Index/distributor')}",
+			success:function(data){
+				alert(data);
+			}
+		});
 		
-		jQuery.validator.addMethod("mobile", function (value, element) {
-		    var mobile = /^1[3|4|5|7|8]\d{9}$/;
-			return this.optional(element) || (mobile.test(value));
-		}, "手机格式不对");
-	})
-			
+	}*/
 	</script>
+	
 
 </block>
 
@@ -43,12 +46,12 @@
 		    <p>邀请人：<font color="#F0005E">{$referrer.nickname}</font>（请核对）</p>
 		
 		    <form class="validate-form"  >
-		        <p><input type="text" name="name"  class="required  am-form-field am-radius" placeholder="请填写真实姓名,用与佣金结算"/></p>
+		        <p><input type="text" name="name"  class="required  am-form-field am-radius" value="" placeholder="请填写真实姓名,用与佣金结算"/></p>
 					<input name="referrer" value="{$referrer.id}" type="hidden"/>
-		        <p><input type="text" name="tel" class="required mobile am-form-field am-radius" placeholder="请填写手机号码方便联系"/></p>
+		        <p><input type="text" name="phone" class="required mobile am-form-field am-radius" placeholder="请填写手机号码方便联系" value=""/></p>
 		
-		        <p><input type="text" name="city" class="required am-form-field am-radius" placeholder="请填写所在城市"/></p>
-		        <button type="button" url="{:U('Shop/Index/addDistributor')}" target-form="validate-form"  class="ajax-post am-btn am-btn-primary am-btn-block">申请成为分销商</button>
+		        <p><input type="text" name="address" class="required am-form-field am-radius" placeholder="请填写所在地区" value=""/></p>
+		        <button type="button" url="{:U('Shop/Index/distributor')}" target-form="validate-form"  class="ajax-post am-btn am-btn-primary am-btn-block">申请成为分销商</button>
 		    </form>
 		    
 
