--- a/Application/Shop/View/style1/partial/footermenu.html
+++ b/Application/Shop/View/style1/partial/footermenu.html
@@ -10,8 +10,8 @@ id="">
     </li>
     <li>
       <a href="{:U('Shop/Product/search')}" class="">
-       <i class="am-icon-search-plus"></i>
-        <span class="am-navbar-label">发现</span>
+       <i class="am-icon-users"></i>
+        <span class="am-navbar-label">分销中心</span>
       </a>
     </li>
     <li>
