--- a/Public/Shop/css/distributor_add.css
+++ b/Public/Shop/css/distributor_add.css
@@ -10,7 +10,8 @@ ul, li {
 }
 
 .div_logo {
-    background: red;
+    background:url(../imgs/img11.jpg);
+    background-size:100% 100%;
     width: 100%;
     height: 3rem;
 }
