--- a/Application/Admin/View/default/Store/config.html
+++ b/Application/Admin/View/default/Store/config.html
@@ -33,8 +33,8 @@
 				<div class="form-group">
 					<label class="control-label col-lg-2 col-md-2">&nbsp;</label>
 					<div class="col-lg-10 col-md-10">
-						<a target-form="wxpayopenidForm" href="{:U('Admin/Shop/config')}" class="ajax-post  btn btn-sm btn-primary"><i class="fa fa-save"></i>保存</a>
-						<a  href="{:U('Admin/Shop/config')}" class="btn btn-sm btn-primary"><i class="fa fa-times-circle"></i>取消</a>
+						<a target-form="wxpayopenidForm" href="{:U('Admin/Store/config')}" class="ajax-post  btn btn-sm btn-primary"><i class="fa fa-save"></i>保存</a>
+						<a  href="{:U('Admin/Store/config')}" class="btn btn-sm btn-primary"><i class="fa fa-times-circle"></i>取消</a>
 					</div>
 				</div>
 			</form>
