--- a/Application/Shop/View/style1/Error/please_subscribe.html
+++ b/Application/Shop/View/style1/Error/please_subscribe.html
@@ -6,8 +6,8 @@
 
 <block name="area_body">
 	<div class="am-text-center">
-		请长按图中指纹，识别二维码！
-		<img class="am-img-responsive" src="__IMG__/scan.jpg?v=1" alt="同诚汇（微信号：wytongchenghui）" />
+        请先关注公众号，请长按图中指纹，识别二维码！
+		<img class="am-img-responsive" src="{$wxaccount['qrcode']}" alt="同诚汇（微信号：wytongchenghui）" />
 	</div>	
 	<p></p>
 	<p></p>
@@ -18,5 +18,6 @@
 </block>
 
 <block name="area_footer">
+
 </block>
 
