--- a/Application/Admin/View/default/Store/index.html
+++ b/Application/Admin/View/default/Store/index.html
@@ -74,8 +74,8 @@
 									
 									<td>
 										<a href="{:U('Admin/WxshopProduct/index',array('storeid'=>$vo['id']))}" class="btn btn-sm btn-primary"><i class="fa fa-building"></i>店铺商品管理</a>
-										<a href="{:U('Admin/Wxshop/edit',array('id'=>$vo['id']))}" class="btn btn-sm btn-default"><i class="fa fa-edit"></i>编辑</a>
-										<a href="{:U('Admin/Wxshop/delete',array('id'=>$vo['id']))}" class="ajax-get confirm btn btn-sm btn-danger"><i class="fa fa-trash"></i>删除</a>
+										<a href="{:U('Admin/Store/edit',array('id'=>$vo['id']))}" class="btn btn-sm btn-default"><i class="fa fa-edit"></i>编辑</a>
+										<a href="{:U('Admin/Store/delete',array('id'=>$vo['id']))}" class="ajax-get confirm btn btn-sm btn-danger"><i class="fa fa-trash"></i>删除</a>
 									</td>
 								</tr>
 
