--- a/Application/Shop/View/style1/Orders/confirm.html
+++ b/Application/Shop/View/style1/Orders/confirm.html
@@ -102,7 +102,7 @@
             -->
             <div class="address am-padding-sm am-cf">
             		<empty name="default_address">
-            			<a href="{:U('Shop/Address/add')}" ><i class="am-icon-map-marker"></i>请先选择收货地址<i class="am-icon-chevron-right am-fr"></i></a>
+            			<a href="{:U('Shop/Address/add')}" class="am-text-danger am-text-lg" ><i class="am-icon-map-marker"></i>请先选择收货地址<i class="am-icon-chevron-right am-fr"></i></a>
             		<else/>
             			<a href="{:U('Shop/Address/add')}">
 	            		<i class="am-icon-map-marker am-icon-lg am-text-primary am-fl"></i>
