--- a/Application/Shop/View/style1/template/base_index2.html
+++ b/Application/Shop/View/style1/template/base_index2.html
@@ -3,7 +3,7 @@
 
 	<head>
 		<meta charset="utf-8">
-		<title>{:C('WEBSITE_TITLE')}</title>
+		<title>{$meta_title|default='杭州博也网络科技'}</title>
 		<meta name="keywords" content="{$seo.keywords|default=" "}" />
 		<meta name="description" content="{$seo.description|default=" "}" />
 		<meta name="author" content="{$cfg.owner|default=" Gooraye "}" />
