--- a/Application/Admin/View/default/Advert/edit.html
+++ b/Application/Admin/View/default/Advert/edit.html
@@ -48,15 +48,26 @@
 							<div class="help-block">(广告展示的时间段,默认7天)</div>
 						</div>
 					</div>
+                    <div class="form-group">
+                    <label for="inputtitle" class="col-md-2 col-lg-2 control-label">广告位置</label>
+                    <div class="col-md-10 col-lg-10">
+                        <div class="col-md-10 col-lg-10">
+                            <select name="post_category" >
+                                {:W("Partials/datatree",array(getDatatree('ADVERT_POSITION'),true,$vo['position']))}
+                            </select>
+                            <div class="help-block">(选择位置)</div>
+                        </div>
+                    </div>
+                </div>
 					<div class="form-group">
-						<label for="inputtitle" class="col-md-2 col-lg-2 control-label">图片标题</label>
+						<label for="inputtitle" class="col-md-2 col-lg-2 control-label">广告标题</label>
 						<div class="col-md-10 col-lg-10">
 							<input type="text" class="required form-control input-short" value="{$vo.title}" name="title" id="title" placeholder="请给图片起个标题或默认">
 							<div class="help-block">(给图片起个标题或默认)</div>
 						</div>
 					</div>
 					<div class="form-group">
-						<label for="inputtitle" class="col-md-2 col-lg-2 control-label">图片地址</label>
+						<label for="inputtitle" class="col-md-2 col-lg-2 control-label">广告图片地址</label>
 						<div class="col-md-10 col-lg-10">
 							<input type="hidden" class="" name="img" id="img" placeholder="请给图片起个标题或默认">
 							<!-- 图片选择DOM结构 -->
@@ -86,10 +97,10 @@
 						</div>
 					</div>
 					<div class="form-group">
-						<label for="inputtitle" class="col-md-2 col-lg-2 control-label">图片描述</label>
+						<label for="inputtitle" class="col-md-2 col-lg-2 control-label">广告描述</label>
 						<div class="col-md-10 col-lg-10">
 							<textarea name="notes" class="form-control" rows="5">{$vo.notes}</textarea>							
-							<div class="help-block">(图片描述)</div>
+							<div class="help-block">(广告描述)</div>
 						</div>
 					</div>
 					<div class="form-group">
