审核条件筛选Bug修复

--- a/Application/Shop/View/style1/User/add.html
+++ b/Application/Shop/View/style1/User/add.html
@@ -69,6 +69,11 @@
 	</script>
 </block>
 <block name="area_body">
+	<div class="header">
+		<div class="am-topbar am-topbar-default am-topbar-fixed-top"><a href="javascript:history.back(-1);"><i class="am-icon-chevron-left"></i>&nbsp;&nbsp;返回</a></div>
+	</div>
+	
+	
 	<div class="div_main">
 		
 		
