--- a/Application/Shop/View/style1/User/withdraw.html
+++ b/Application/Shop/View/style1/User/withdraw.html
@@ -11,7 +11,9 @@
 	</script>
 </block>
 <block name="area_body">
-	
+		<div class="header">
+			<div class="am-topbar am-topbar-default am-topbar-fixed-top"><a href="javascript:history.back(-1);"><i class="am-icon-chevron-left"></i>&nbsp;&nbsp;个人中心</a></div>
+		</div>
 		<div class="div_main">
 			<ul>
 				<li ><font class="am-icon-jpy" style="font-size:3rem;color:#FADB05;"></font></li>
