--- a/Application/Admin/View/default/Withdraw/query.html
+++ b/Application/Admin/View/default/Withdraw/query.html
@@ -27,6 +27,7 @@
                             &nbsp;
                         </div>
                     </div>
+                    <br />
                     <div class="form-group">
                         <div class="input-group" >
                             <div class="input-group-addon">审核状态</div>
@@ -52,11 +53,11 @@
                             时间
                             <i class="fa fa-calendar"></i>
                         </div>
-                        <input type="text" name="startdatetime" id="startdatetime" class="form-control input-short" value="{:date('Y-m-d',$startdatetime)}" />
+                        <input type="text" name="startdatetime" id="startdatetime" class="form-control input-short" value="{:date('Y-m-d H:i:s',$startdatetime)}" />
                         <div class="input-group-addon">
                             <i class="fa fa-long-arrow-right"></i>
                         </div>
-                        <input type="text" name="enddatetime" id="enddatetime" class="form-control input-short" value="{:date('Y-m-d',$enddatetime)}" />
+                        <input type="text" name="enddatetime" id="enddatetime" class="form-control input-short" value="{:date('Y-m-d H:i:s',$enddatetime)}" />
                     </div>
                     <button type="submit" class="btn btn-default"><i class="fa fa-search"></i>{:L('BTN_SEARCH')}</button>
                     </div>
